Mutual Info test

--- a/code/EDA_notebook.ipynb
+++ b/code/EDA_notebook.ipynb
@@ -2007,31 +2007,31 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>9752</th>\n",
+       "      <th>2018</th>\n",
        "      <td>rna_LINC00173</td>\n",
        "      <td>30.596098</td>\n",
        "      <td>0.000001</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1007</th>\n",
+       "      <th>7352</th>\n",
        "      <td>rna_CLK2P1</td>\n",
        "      <td>25.027320</td>\n",
        "      <td>0.000009</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3895</th>\n",
+       "      <th>15590</th>\n",
        "      <td>rna_KCNQ4</td>\n",
        "      <td>24.931682</td>\n",
        "      <td>0.000009</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5386</th>\n",
+       "      <th>1038</th>\n",
        "      <td>rna_FRAT2</td>\n",
        "      <td>23.106590</td>\n",
        "      <td>0.000017</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2706</th>\n",
+       "      <th>13131</th>\n",
        "      <td>rna_RPL13AP5</td>\n",
        "      <td>21.671792</td>\n",
        "      <td>0.000028</td>\n",
@@ -2043,31 +2043,31 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7760</th>\n",
+       "      <th>10266</th>\n",
        "      <td>rna_ZNF561-AS1</td>\n",
        "      <td>4.054261</td>\n",
        "      <td>0.049932</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8034</th>\n",
+       "      <th>10524</th>\n",
        "      <td>rna_FIGN</td>\n",
        "      <td>4.053459</td>\n",
        "      <td>0.049954</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11179</th>\n",
+       "      <th>7765</th>\n",
        "      <td>rna_PPP1R3C</td>\n",
        "      <td>4.053288</td>\n",
        "      <td>0.049958</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6042</th>\n",
+       "      <th>13796</th>\n",
        "      <td>rna_CTXN1</td>\n",
        "      <td>4.052422</td>\n",
        "      <td>0.049982</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7959</th>\n",
+       "      <th>12568</th>\n",
        "      <td>rna_PYGO1</td>\n",
        "      <td>4.052339</td>\n",
        "      <td>0.049984</td>\n",
@@ -2079,17 +2079,17 @@
       ],
       "text/plain": [
        "              Feature    F-Value   P-Value\n",
-       "9752    rna_LINC00173  30.596098  0.000001\n",
-       "1007       rna_CLK2P1  25.027320  0.000009\n",
-       "3895        rna_KCNQ4  24.931682  0.000009\n",
-       "5386        rna_FRAT2  23.106590  0.000017\n",
-       "2706     rna_RPL13AP5  21.671792  0.000028\n",
+       "2018    rna_LINC00173  30.596098  0.000001\n",
+       "7352       rna_CLK2P1  25.027320  0.000009\n",
+       "15590       rna_KCNQ4  24.931682  0.000009\n",
+       "1038        rna_FRAT2  23.106590  0.000017\n",
+       "13131    rna_RPL13AP5  21.671792  0.000028\n",
        "...               ...        ...       ...\n",
-       "7760   rna_ZNF561-AS1   4.054261  0.049932\n",
-       "8034         rna_FIGN   4.053459  0.049954\n",
-       "11179     rna_PPP1R3C   4.053288  0.049958\n",
-       "6042        rna_CTXN1   4.052422  0.049982\n",
-       "7959        rna_PYGO1   4.052339  0.049984\n",
+       "10266  rna_ZNF561-AS1   4.054261  0.049932\n",
+       "10524        rna_FIGN   4.053459  0.049954\n",
+       "7765      rna_PPP1R3C   4.053288  0.049958\n",
+       "13796       rna_CTXN1   4.052422  0.049982\n",
+       "12568       rna_PYGO1   4.052339  0.049984\n",
        "\n",
        "[1594 rows x 3 columns]"
       ]
@@ -2331,171 +2331,41 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'mutual_info_result_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[34], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmutual_info_result_df\u001b[49m[mutual_info_result_df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mP-Value\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.05\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFeature\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mcount()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'mutual_info_result_df' is not defined"
+     ]
     }
    ],
    "source": [
-    "chi_test_result_df[chi_test_result_df[\"P-Value\"]<=0.05][\"Feature\"].count()"
+    "mutual_info_result_df[mutual_info_result_df[\"P-Value\"]<=0.05][\"Feature\"].count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "56adf5cb-f46b-488c-9722-d290bf2a3bf9",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Feature</th>\n",
-       "      <th>F-Value</th>\n",
-       "      <th>P-Value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>mut_HSPG2</td>\n",
-       "      <td>8.257143</td>\n",
-       "      <td>0.004059</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>mut_H6PD</td>\n",
-       "      <td>6.760000</td>\n",
-       "      <td>0.009322</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>94</th>\n",
-       "      <td>mut_CUL9</td>\n",
-       "      <td>6.760000</td>\n",
-       "      <td>0.009322</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>156</th>\n",
-       "      <td>mut_LRRIQ1</td>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>0.025347</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>mut_MAP2</td>\n",
-       "      <td>4.800000</td>\n",
-       "      <td>0.028460</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>133</th>\n",
-       "      <td>mut_KAT6B</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104</th>\n",
-       "      <td>mut_ZNF804B</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>83</th>\n",
-       "      <td>mut_DMGDH</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>mut_CACNA1S</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>186</th>\n",
-       "      <td>mut_GPR179</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>214 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         Feature   F-Value   P-Value\n",
-       "4      mut_HSPG2  8.257143  0.004059\n",
-       "2       mut_H6PD  6.760000  0.009322\n",
-       "94      mut_CUL9  6.760000  0.009322\n",
-       "156   mut_LRRIQ1  5.000000  0.025347\n",
-       "45      mut_MAP2  4.800000  0.028460\n",
-       "..           ...       ...       ...\n",
-       "133    mut_KAT6B  0.000000  1.000000\n",
-       "104  mut_ZNF804B  0.000000  1.000000\n",
-       "83     mut_DMGDH  0.000000  1.000000\n",
-       "23   mut_CACNA1S  0.000000  1.000000\n",
-       "186   mut_GPR179  0.000000  1.000000\n",
-       "\n",
-       "[214 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "chi_test_result_df.sort_values(by=\"F-Value\",ascending=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "6b6f67a6-1465-44fe-8119-64a9ac4534ce",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mut_final_columns = list(set(chi_test_result_df[chi_test_result_df[\"P-Value\"]<=0.05][\"Feature\"]))\n",
     "len(mut_final_columns)"
@@ -2503,132 +2373,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
+   "id": "4ee59b4a-db88-408c-b2e9-9163c6f0f82f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_selection import mutual_info_classif\n",
+    "\n",
+    "y = df['Fulvestrant_response'] \n",
+    "\n",
+    "selector = SelectKBest(score_func=mutual_info_classif, k='all')\n",
+    "\n",
+    "selector.fit(df[mut_columns], y)\n",
+    "\n",
+    "selected_indices = selector.get_support(indices=True)\n",
+    "\n",
+    "mutual_info_values = selector.scores_\n",
+    "\n",
+    "# Create a DataFrame to display the results\n",
+    "mutual_info_result_df = pd.DataFrame({\n",
+    "    'Feature': mut_columns,\n",
+    "    'Mutual Info': mutual_info_values\n",
+    "})\n",
+    "\n",
+    "mutual_info_result_df.sort_values(by=\"Mutual Info\", ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da345838-46f2-485f-8b7d-d2229ff28124",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "mutual_info_result_df.describe().T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0ea599f-c2a9-40ee-b8b1-2cedaebcd08c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "mutual_info_result_df[\"Mutual Info\"].hist(bins=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "75f1309a-e1c6-4447-9d5b-0dd72c67cc42",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Feature</th>\n",
-       "      <th>Skewness</th>\n",
-       "      <th>Kurtosis</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>rna_MTRNR2L7</th>\n",
-       "      <td>rna_MTRNR2L7</td>\n",
-       "      <td>1.519782</td>\n",
-       "      <td>1.479597</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>rna_ARHGAP4</th>\n",
-       "      <td>rna_ARHGAP4</td>\n",
-       "      <td>1.317437</td>\n",
-       "      <td>0.765246</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>rna_FAM175A</th>\n",
-       "      <td>rna_FAM175A</td>\n",
-       "      <td>1.332725</td>\n",
-       "      <td>2.201640</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>rna_RIPK4</th>\n",
-       "      <td>rna_RIPK4</td>\n",
-       "      <td>0.218961</td>\n",
-       "      <td>-1.216901</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>rna_SLC9A1</th>\n",
-       "      <td>rna_SLC9A1</td>\n",
-       "      <td>-0.319221</td>\n",
-       "      <td>-0.014310</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>rna_SGK1</th>\n",
-       "      <td>rna_SGK1</td>\n",
-       "      <td>0.646378</td>\n",
-       "      <td>-0.562205</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>rna_PIM2</th>\n",
-       "      <td>rna_PIM2</td>\n",
-       "      <td>2.420541</td>\n",
-       "      <td>8.361121</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>rna_FAM185A</th>\n",
-       "      <td>rna_FAM185A</td>\n",
-       "      <td>1.643574</td>\n",
-       "      <td>3.366740</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>rna_ZNF573</th>\n",
-       "      <td>rna_ZNF573</td>\n",
-       "      <td>0.960084</td>\n",
-       "      <td>0.558696</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>rna_RUSC1</th>\n",
-       "      <td>rna_RUSC1</td>\n",
-       "      <td>0.430894</td>\n",
-       "      <td>-0.021335</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1594 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                   Feature  Skewness  Kurtosis\n",
-       "rna_MTRNR2L7  rna_MTRNR2L7  1.519782  1.479597\n",
-       "rna_ARHGAP4    rna_ARHGAP4  1.317437  0.765246\n",
-       "rna_FAM175A    rna_FAM175A  1.332725  2.201640\n",
-       "rna_RIPK4        rna_RIPK4  0.218961 -1.216901\n",
-       "rna_SLC9A1      rna_SLC9A1 -0.319221 -0.014310\n",
-       "...                    ...       ...       ...\n",
-       "rna_SGK1          rna_SGK1  0.646378 -0.562205\n",
-       "rna_PIM2          rna_PIM2  2.420541  8.361121\n",
-       "rna_FAM185A    rna_FAM185A  1.643574  3.366740\n",
-       "rna_ZNF573      rna_ZNF573  0.960084  0.558696\n",
-       "rna_RUSC1        rna_RUSC1  0.430894 -0.021335\n",
-       "\n",
-       "[1594 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "skewness_scores = df[rna_final_columns].skew()\n",
     "kurtosis_scores = df[rna_final_columns].kurtosis()\n",
@@ -2645,20 +2449,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "75496076-0806-402d-83a2-58ccbd389437",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1602\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "final_columns = ['Fulvestrant_response', 'type']\n",
     "final_columns.extend(mut_final_columns)\n",
@@ -2669,108 +2465,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "1e8771eb-1788-41cb-b537-c64f54d389df",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>features</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>193</th>\n",
-       "      <td>Fulvestrant_response</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>313</th>\n",
-       "      <td>mut_CIT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1476</th>\n",
-       "      <td>mut_CUL9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1174</th>\n",
-       "      <td>mut_H6PD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>398</th>\n",
-       "      <td>mut_HSPG2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>69</th>\n",
-       "      <td>rna_ZSCAN16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>768</th>\n",
-       "      <td>rna_ZSCAN32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>rna_ZSCAN9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1428</th>\n",
-       "      <td>rna_ZYX</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>65</th>\n",
-       "      <td>type</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1602 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  features\n",
-       "193   Fulvestrant_response\n",
-       "313                mut_CIT\n",
-       "1476              mut_CUL9\n",
-       "1174              mut_H6PD\n",
-       "398              mut_HSPG2\n",
-       "...                    ...\n",
-       "69             rna_ZSCAN16\n",
-       "768            rna_ZSCAN32\n",
-       "23              rna_ZSCAN9\n",
-       "1428               rna_ZYX\n",
-       "65                    type\n",
-       "\n",
-       "[1602 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pd.DataFrame(final_columns,columns=[\"features\"]).sort_values(by=\"features\")"
    ]
