--- a/code/Rapamycin_FS.ipynb
+++ b/code/Rapamycin_FS.ipynb
@@ -631,16 +631,8 @@
    "outputs": [],
    "source": [
     "# Assuming 'df' is your DataFrame\n",
-    "df.to_csv('Rapamycin_final.csv', index=False)\n"
+    "df.to_csv('Rapamycin_final.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f58797c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -659,7 +651,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
